--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,82 +1,132 @@
-/* Places style */
-.places article {
-    border: 1px solid #ff5a5f;
-    border-radius: 4px;
-    display: inline-block;
+.places{
+    display: flex;
+    flex-direction: column;
+    padding-left: 30px;
+}
+.places h1{
+    font-size: 30px;
+}
+.places_title{
+    padding-top: 30px;
+    margin-bottom: -25px;
+}
+.articles{
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+article{
+    width: 390px;
     margin: 20px;
     padding: 20px;
-    width: 390px;
-  }
-
-
-.places h1 {
-    font-size: 30px;
-    font-weight: bold;
-    margin: .67em 0 .67em 0;
-    width: 100%;
-  }
-  
- 
-.places h2 {
-    font-size: 30px;
-    font-weight: bold;
+    border: solid #FF5A5F 1px;
+    border-radius: 4px;
     text-align: center;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-
-.places {
+    font-size: 30px;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding-bottom: 30px;
+}
+article h2{
+    font-size: 30px;
+    margin-top: -1px;
+    padding-left: 20%;
+}
+.article_title{
     width: 100%;
-  }
-
-  .places .name_and_price {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 20px;
-  }
-  
-
-.places .price_by_night {
-    align-items: center;
-    border: 4px solid #ff5a5f;
+}
+.price_by_night{
+    color: #FF5A5F;
+    border: solid #FF5A5F 4px;
     border-radius: 50%;
-    color: #ff5a5f;
-    display: flex;
-    font-size: 30px;
-    height: 60px;
-    justify-content: center;
     min-width: 60px;
-  }
-  
-
-.places .information {
-    align-items: center;
-    border-top: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
+    height: 60px;
+    font-size: 24px;
+    margin-top: -10px;
+}
+.price{
+    margin-top: 17px;
+}
+.price_title{
+    display: flex;
+}
+.information{
+    height:80px;
+    border-top: solid #DDDDDD 1px;
+    border-bottom: solid #DDDDDD 1px;
     display: flex;
     flex-direction: row;
-    height: 80px;
-    justify-content: space-around;
-    text-align: center;
-  }
-  
-
-.places .max_guest,
-.places .number_rooms,
-.places .number_bathrooms{
+    justify-content: center;
+}
+.max_guest{
     width: 100px;
-  }
+    display: flex;
+    height: inherit;
+    flex-direction: column;
+    justify-content: center;
+}
+.guest_icon{
+    height: inherit;
+    width: inherit;
+    background: url(https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon_group.png);
+    background-repeat: no-repeat;
+    margin-left: 35px;
+}
+.guest_number h2{
+    font-size: 10px;
+    color: grey;
+}
 
-.places .user {
-    margin: 20px auto 20px auto;
-  }
+.number_rooms{
+    width: 100px;
+    display: flex;
+    height: inherit;
+    flex-direction: column;
+    justify-content: center;
+}
+.rooms_icon{
+    height: inherit;
+    width: inherit;
+    background: url(https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon_bed.png);
+    background-repeat: no-repeat;
+    margin-left: 35px;
+}
+.rooms_number h2{
+    font-size: 10px;
+    color: grey;
+}
 
-footer {
-    position: relative;
+.number_bathrooms{
+    width: 100px;
+    display: flex;
+    height: inherit;
+    flex-direction: column;
+    justify-content: center;
+}
+.bathrooms_icon{
+    height: inherit;
+    width: inherit;
+    background: url(https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon_bath.png);
+    background-repeat: no-repeat;
+    margin-left: 35px;
+}
+.bathrooms_number h2{
+    font-size: 10px;
+    color: grey;
+}
+.user{
+    font-size: 11px;
+    color: rgb(29, 26, 26);;
+    text-align: left;
+    margin-top: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.description{
+    font-size: 11px;
+    color: rgb(29, 26, 26);;
+    text-align: left;
+    margin-top: 5px;
+    font-family: Arial, Helvetica, sans-serif;
 }
